code cleanup, testing margin on fa arrow spacing issue

--- a/src/components/FooterPage/footerpage.css
+++ b/src/components/FooterPage/footerpage.css
@@ -21,8 +21,7 @@
 
 .footer-page-button-row,
 .arrow-icon {
-    display: flex;
-    justify-content: space-around;    
+    margin: auto;   
 }
 
 .arrow-icon {
